try fix rescue bg on mobile safsri

--- a/lands/Bacteoff/css/style.css
+++ b/lands/Bacteoff/css/style.css
@@ -1221,7 +1221,7 @@ footer a {
     }
 
     .rescue {
-        background: none;
+        background: #fff;
     }
 
     .rescue-mobile {
